# industrial-robots

./: Cargo.toml  README.md
src/: collision.rs  fanuc.rs  frames.rs  helpers.rs  lib.rs  poses.rs  representations.rs  robot.rs  type_aliases.rs
src/fanuc/: crx.rs  crx_ik.rs
src/fanuc/meshes/: crx-10ia-j0.smol  crx-10ia-j1.smol  crx-10ia-j2.smol  crx-10ia-j3.smol  crx-10ia-j4.smol  crx-10ia-j5.smol  crx-10ia-j6.smol  crx-5ia-j0.smol  crx-5ia-j1.smol  crx-5ia-j2.smol  crx-5ia-j3.smol  crx-5ia-j4.smol  crx-5ia-j5.smol  crx-5ia-j6.smol
