[package]
name = "industrial-robots"
version = "0.2.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ik-geo = "0.1.2"

[dev-dependencies]
test-case = "3.3.1"
approx = "0.5.1"
rand = "0.9.0"
serde = "1.0.219"
serde_json = "1.0.140"